# rust_web_server

./: .env  Cargo.toml  README.md
Templates/: index.html  yelp.html
src/: main.rs
