[package]
name = "rust_web_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.0-beta.8"
actix-files = "0.6"
askama = "0.12.1"
serde_json = "1.0"
reqwest = { version = "0.11.3", features = ["json"] }
actix-rt = "2"
thiserror = "1.0"
dotenv = "0.15.0"
log = "0.4"
env_logger = "0.9.0"
